<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_ripple_effect">

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgPhoto"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_16sp" />
</RelativeLayout>